--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         
         <div class="profile-section">
             <div class="profile-image">
-                <img src="/pic3.jpg" alt="Sweta Swarnim" />
+                <img src="/IMG_20250411_204314_975.jpg" alt="Sweta Swarnim" />
             </div>
             <div class="basic-details">
                 <h2>SWETA SWARNIM</h2>
