--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
             <div class="hobbies-interests">
                 <div class="hobby-tag">Reading</div>
                 <div class="hobby-tag">Cooking</div>
-                <div class="hobby-tag">Traveling</div>
+                <div class="hobby-tag">Travelling</div>
                 <div class="hobby-tag">Music</div>
                 
             </div>
