--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         }
         
         .header {
-            background: linear-gradient(135deg, #ff9a9e 0%, #fad0c4 100%);
+            background: brown;
             color: white;
             text-align: center;
             padding: 20px;
