--- a/index.html
+++ b/index.html
@@ -221,16 +221,16 @@
                     <div class="detail-value">Darbhanga</div>
                 </div>
                 <div class="details-row">
-                    <div class="detail-label">Religion & Caste:</div>
-                    <div class="detail-value">Hindu, Yadav</div>
+                    <div class="detail-label">Religion :</div>
+                    <div class="detail-value">Hindu</div>
                 </div>
                 <div class="details-row">
-                    <div class="detail-label">Gotra:</div>
-                    <div class="detail-value">Goriya</div>
+                    <div class="detail-label">Caste:</div>
+                    <div class="detail-value">Yadav(Goriya)</div>
                 </div>
                 <div class="details-row">
                     <div class="detail-label">Height & Weight:</div>
-                    <div class="detail-value">5 ft. 4 in., 50 kg</div>
+                    <div class="detail-value">5 ft. 3 in., 50 kg</div>
                 </div>
                 <div class="details-row">
                     <div class="detail-label">Blood Group:</div>
